[package]
name = "t51core"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[dependencies]
anymap = "0.12.1"
indexmap = "1.0.1"
lazy_static = "1.1.0"

[dev-dependencies]
criterion = "0.2"
t51core_proc = { path="../t51core_proc", features=["internal"]}

[[bench]]
name = "perf"
harness = false
