[package]
name = "t51core"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[dependencies]
anymap = "*"
hashbrown = "*"
indexmap = "*"
lazy_static = "*"
sequence_trie = "*"
serde = "*"
serde_json = "*"

[dev-dependencies]
criterion = "0.2"
rand = "0.5"

[[bench]]
name = "perf"
harness = false
