[package]
name = "t51core_proc"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "0.4", features = ["nightly"]}
quote = "0.6"
