[package]
name = "t51core"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[dependencies]
anymap = "*"
hashbrown = "*"
bincode = "*"
byteorder = "*"
libsodium-sys = "*"
slice-deque = "*"
mio = "*"
indexmap = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
t51core_proc = { path = "../t51core_proc" }

[dev-dependencies]
criterion = "0.2"
rand = "0.5"

[[bench]]
name = "system"
harness = false

[[bench]]
name = "world"
harness = false

[[bench]]
name = "temp"
harness = false
