[package]
name = "gamerunner"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "*"
serde = "*"
serde_derive = "*"
byteorder = "*"
flux = { path = "../../lib/flux" }
gamecore = { path = "../core" }
neutronium = { path = "../../lib/neutronium" }
