[package]
name = "authenticator"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
hashbrown = { version ="*", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
flux = { path = "../flux" }