[package]
name = "neutronium"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
anymap = "*"
hashbrown = "*"
indexmap = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
neutronium_proc = { path = "../neutronium_proc" }

[dev-dependencies]
criterion = "0.2"
rand = "0.5"

[[bench]]
name = "system"
harness = false

[[bench]]
name = "world"
harness = false

[[bench]]
name = "temp"
harness = false
