[package]
name = "neutronium"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
anymap = "*"
hashbrown = "*"
byteorder = "*"
indexmap = "*"
lazy_static = "*"
ctor = "*"
mio = "*"
paste = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
slice-deque = "*"
flux = { path = "../flux" }
neutronium_proc = { path = "../neutronium_proc" }

[dev-dependencies]
criterion = "*"
rand = "*"

[[bench]]
name = "system"
harness = false

[[bench]]
name = "world"
harness = false

[[bench]]
name = "temp"
harness = false
