[package]
name = "authenticator"
version = "0.1.0"
authors = ["SleepingPills <tom.farnbauer@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "*"
rand = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
byteorder = "*"
rocket = "*"
rocket_contrib = "*"
hashbrown = { version ="*", features = ["serde"] }
chrono = { version = "*", features = ["serde"] }
flux = { path = "../../lib/flux" }